--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <form action="login.php" method="POST">
             Username: <input type="text" name="username" placeholder="Username"/> <br/>
-            Password: <input type="text" name="password" placeholder="Password"/> <br/>
+            Password: <input type="password" name="password" placeholder="Password"/> <br/>
             <input type="submit" name="login" value="Sign In"/>
         </form>
 
